@@ -95,7 +95,7 @@ module StateMachine
       attribute = machine.attribute
       
       if name = object.send("#{attribute}_event")
-        if event = self[name.to_sym, :qualified_name]
+        if event = self[name.to_sym, :name]
           unless result = object.send("#{attribute}_event_transition") || event.transition_for(object)
             # No valid transition: invalidate
             machine.invalidate(object, "#{attribute}_event", :invalid_event, [[:state, machine.states.match!(object).name]]) if invalidate
