@@ -168,6 +168,41 @@ class EventCollectionAttributeWithMachineActionTest < Test::Unit::TestCase
   end
 end
 
+class EventCollectionAttributeWithNamespacedMachineTest < Test::Unit::TestCase
+  def setup
+    @klass = Class.new do
+      def save
+      end
+    end
+    
+    @machine = StateMachine::Machine.new(@klass, :namespace => 'alarm', :initial => :active, :action => :save)
+    @events = StateMachine::EventCollection.new(@machine)
+    
+    @machine.event :disable
+    @machine.state :active, :off
+    @events << @disable = StateMachine::Event.new(@machine, :disable)
+    
+    @object = @klass.new
+  end
+  
+  def test_should_not_have_transition_if_nil
+    @object.state_event = nil
+    assert_nil @events.attribute_transition_for(@object)
+  end
+  
+  def test_should_have_invalid_transition_if_event_cannot_be_fired
+    @object.state_event = 'disable'
+    assert_equal false, @events.attribute_transition_for(@object)
+  end
+  
+  def test_should_have_valid_transition_if_event_can_be_fired
+    @disable.transition :active => :off
+    @object.state_event = 'disable'
+    
+    assert_instance_of StateMachine::Transition, @events.attribute_transition_for(@object)
+  end
+end
+
 class EventCollectionWithValidationsTest < Test::Unit::TestCase
   def setup
     StateMachine::Integrations.const_set('Custom', Module.new do
